<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="95dp"
    android:orientation="horizontal"
    android:padding="10dp">
    <com.google.android.flexbox.FlexboxLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:justifyContent="space_evenly"
        app:alignItems="center">
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/imageViewProduct"
                android:contentDescription="@string/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/con1"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignItems="center"
                app:justifyContent="space_around">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainText"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:text="@string/product_name" />
                    <TextView
                        android:id="@+id/textViewProductName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainText"
                        android:layout_gravity="center"
                        android:textSize="14sp"
                        android:text="@string/product_name" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/mainText"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:textStyle="bold"
                        android:text="@string/product_category" />
                    <TextView
                        android:id="@+id/textViewCategory"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/mainText"
                        android:textSize="14sp"
                        android:text="@string/product_category" />
                </LinearLayout>
            </com.google.android.flexbox.FlexboxLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/productUpdateBtn"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:contentDescription="@string/productUpdateBtn"
                android:layout_weight="1"
                android:src="@drawable/product_update" />
            <ImageView
                android:id="@+id/productDeleteBtn"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:contentDescription="@string/productDeleteBtn"
                android:layout_weight="1"
                android:src="@drawable/delete" />
        </LinearLayout>
    </com.google.android.flexbox.FlexboxLayout>
</LinearLayout>